--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block page_title %}Password Reset Page{% endblock %}
-{% block page_heading %}Reset Password{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
 
@@ -11,8 +10,6 @@
         <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
     </div>
      {{ form.email.errors }}
-    <p>
-        <label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" value="Reset password" />
-    </p>
+    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" value="Reset password" /></p>
 </form>
 {% endblock %}
