--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Home Page{% endblock %}
+{% block content %}
 
-{% block page_heading %}Home{% endblock %}
+{% endblock %}
