--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -11,7 +11,7 @@
         <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
         <div class="caption">
-            <h3>{{ item.product.name }}</h3>
+            <h3>{{ item.product.brand}}</h3>
             <p class="product-description">{{ item.product.description }}</p>
             <p>{{ item.product.price }}</p>
             <p>
