--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -7,7 +7,7 @@
         <div class="panel-body">
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
 
-            <h3>{{ product.name }}</h3>
+            <h3>{{ product.brand }}</h3>
             <p class="product-description">{{ product.description }}</p>
             <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ product.price }}</p>
 
