--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
-{% load bootstap_tags %}
+{% load bootstrap_tags %}
 
 {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
@@ -21,13 +21,15 @@
 
             <div class="caption">
                 <h3>{{ item.product.brand }}</h3>
+                <h4>{{ product.model_type }}</h4>
                 <p class="product-description">{{ item.product.description }}</p>
-                <p>{{ item.quantity }}</p>
-                <p>item.product.price</p>
+                <p>{{ item.quantity }} - {{ item.product.brand }}</p>
+                <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{item.product.price}}</p>
             </div>
         </div>
     </div>
     {% endfor %}
+    <br><br><br><br><br>
 </div>
 <div class="row">
     <p>Total</p>
