--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -8,6 +8,7 @@
             <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
 
             <h3>{{ product.brand }}</h3>
+            <h4>{{ product.model_type }}</h4>
             <p class="product-description">{{ product.description }}</p>
             <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> {{ product.price }}</p>
 
