--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,6 +7,7 @@
 {% block page_heading %}User Login{% endblock %}
 
 {% block content %}
+<div class="container text-center">
 <form method="POST">
     {% csrf_token %}
     {{ login_form | as_bootstrap }}
@@ -14,4 +15,5 @@
 </form>
 
 <p><a href="{% url 'password_reset' %}">Reset your password</a></p>
+</div>
 {% endblock %}
