--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -12,7 +12,7 @@
 
         <div class="caption">
             <h3>{{ item.product.brand}}</h3>
-            <h4>{{ product.model_type }}</h4>
+            <h4>{{ item.product.model_type }}</h4>
             <p class="product-description">{{ item.product.description }}</p>
             <p>{{ item.product.price }}</p>
             <p>
