--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,10 +1,72 @@
 body {
-    font-family: Arial;
-    padding-top: 100px;
+    font-family: Helvetica;
+    padding-top: 40px;
 }
+
+.container {
+    width: 100%;
+    text-align: -webkit-center;
+}
+
+h1 {
+    font-size: 64px;
+}
+
+a {
+    font-size: 20px;
+}
+
+a#product-link {
+    font-size: 16px;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* Navigation bar */
+
+
+
+.navbar-nav>li>a {
+    padding-right: 40px;
+}
+
+a.navbar-brand {
+    font-size: 22px;
+}
+
+/* Search area */
+
+#search {
+    width: 100%;
+    border-radius: 5px;
+}
+
+#search-btn {
+    border-radius: 5px;
+    margin-left: 20px;
+    background-color: #b6cedc;
+    font-size: 18px;
+    margin-top: 50px;
+}
+
+input#id_email {
+    width: 100%;
+    border-radius: 5px;
+}
+
+/* Form control */
 
 form {
     width: 50%;
+    text-align: center;
+    margin: 50px;
+}
+
+.btn-primary {
+    margin-top: 20px;
+    font-size: 18px;
 }
 
 footer {
@@ -77,3 +139,38 @@ caption p {
     border: 1px solid #ddd;
 }
 
+/* landing page */
+
+.landing-section {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  } 
+
+.landing-main { 
+    background: url(http://ethicalmarketingnews.com/wp-content/uploads/2018/03/signiahearingaid.jpg) no-repeat center center fixed; 
+    background-size: cover;
+  }
+
+  .landing-section-content {
+    padding: 2rem;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #ccc;
+  }
+  
+  .brand {
+    margin: 0;
+    color: white;
+  }
+  
+  .brand-text {
+    color: white;
+  }
