--- a/templates/base.html
+++ b/templates/base.html
@@ -1,49 +1,55 @@
 {% load staticfiles %}
+
+{% load bootstrap_tags %}
+
 <html>
 
 <head>
     <title>{% block page_title %}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     {% block head_js %}
     {% endblock %}
 </head>
 
 <body>
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Hear to Hear</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                    <li><a href="{% url 'profile' %}">Profile</a></li>
-                    <li><a href="{% url 'logout' %}">Log Out</a></li>
-                    {%  else %}
-                    <li><a href="{% url 'registration' %}">Register</a></li>
-                    <li><a href="{% url 'login' %}">Log In</a></li>
+        
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'home' %}">Hear to Hear</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'products' %}">Products</a></li>
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Log Out</a></li>
+                {%  else %}
+                <li><a href="{% url 'registration' %}">Register</a></li>
+                <li><a href="{% url 'login' %}">Log In</a></li>
+                {% endif %}
+                <li><a href="/">Accessories</a></li>
+                <li>
+                <a href="{% url 'view_cart' %}">
+                    <i class="fa fa-shipping-cart"></i>Cart
+                    {% if product_count > 0 %}
+                    <label class="badge badge-warning">{{ product_count }}</label>
                     {% endif %}
-                    <li>
-                        <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shipping-cart"></i>Cart
-                            {% if product_count > 0 %}
-                            <label class="badge badge-warning">{{ product_count }}</label>
-                            {% endif %}
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                </a>
+                </li>
+            </ul>
         </div>
     </nav>
     {% if messages %}
@@ -56,16 +62,16 @@
     </div>
     {% endif %}
     <div class="container">
-        <div class="display">
-            <form action="{% url 'search' %}" method="get">
-                <input type="text" name="q">
-                <button type="search">Search</button>
+        <div class="display text-center">
+            <form action="{% url 'search' %}" id="search" method="GET">
+                <input type="text" id="search-btn" name="q">
+                <button type="search" id="search-btn">Search Brands</button>
             </form>
         </div>
         {% block content %} {% endblock %}
     </div>
     <footer>
-        <div class="container">
+        <div class="container text-center">
             <p>By: Brendan O Brien - Milestone Project 4 </p>
         </div>
     </footer>
