--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -14,7 +14,7 @@
             <h3>{{ item.product.brand}}</h3>
             <h4>{{ item.product.model_type }}</h4>
             <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
+            <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ item.product.price }}</p>
             <p>
 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
