--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% load bootstrap_tags %}
+
 {% block title %}Setting New password{% endblock %}
 
 {% block content %}
@@ -12,17 +15,17 @@
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                        <label for="id_new_password1" id="new_password1">New password:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
+                        <label for="id_new_password2" id="new_password2">Confirm password: </label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
+                    <td><input type="submit" class="search-btn" value="Change my password" /></td>
                 </tr>
             </table>
         </form>
