--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% load bootstrap_tags %}
+
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
@@ -10,6 +13,6 @@
         <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
     </div>
      {{ form.email.errors }}
-    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" id="search-btn" value="Reset password" /></p>
+    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" class="search-btn" value="Reset password" /></p>
 </form>
 {% endblock %}
