--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -7,13 +7,13 @@
 {% block page_heading %}User Login{% endblock %}
 
 {% block content %}
+<h2 class="page-title">Login</h2><br>
 <div class="container text-center">
-<form method="POST">
-    {% csrf_token %}
-    {{ login_form | as_bootstrap }}
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-
-<p><a href="{% url 'password_reset' %}">Reset your password</a></p>
+    <form method="POST">
+        {% csrf_token %}
+        {{ login_form | as_bootstrap }}
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+    <p><a href="{% url 'password_reset' %}">Reset your password</a></p>
 </div>
 {% endblock %}
