--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,24 +1,47 @@
 {% extends 'base.html' %}
+
 {% load static from staticfiles %}
+
 {% load bootstrap_tags %}
 
 {% block content %}
+<h2 class="page-title">Shopping Cart</h2>
+
+<!-- Clear Cart -->
+
+{% for item in cart_items %}
+
+<form class="form-inline" class="quantity-input" method="post" action="{% url 'adjust_cart' item.id %}">
+
+    {% csrf_token %}
+
+    <input name="quantity" type="hidden" value="0" class="form-control">
+    <div>
+        <span class="input-group-btn ">
+            <button class="btn btn-success" type="submit">Clear Cart <span class="glyphicon glyphicon-trash"
+                    aria-hidden="true"></span></button>
+        </span>
+    </div>
+</form>
+
+{% endfor %}
+
 <div class="row row-flex">
+
     {% for item in cart_items %}
 
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
+        <div class="panel-body">
+            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
+            <div class="caption">
+                <h3>{{ item.product.brand}}</h3>
+                <h4>{{ item.product.model_type }}</h4>
+                <p class="product-description">{{ item.product.description }}</p>
+                <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ item.product.price }}</p>
+                <form class="form-inline" class="quantity-input" method="post" action="{% url 'adjust_cart' item.id %}">
 
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-
-        <div class="caption">
-            <h3>{{ item.product.brand}}</h3>
-            <h4>{{ item.product.model_type }}</h4>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ item.product.price }}</p>
-            <p>
-
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
+
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
@@ -26,20 +49,26 @@
                             <input name="quantity" type="number" min="0" max="999" class="form-control">
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
+                    </div><br><br>
+                    <span>*Increase or Decrease Quantity to Amend total* </span>
+                    <div>
+                        <span class="input-group-btn">
+                            <button class="btn btn-warning" type="submit">Amend Quantity</button>
+                        </span>
                     </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit"
-                            aria-hidden="true"></span>Amend</button>
                 </form>
-            </p>
+            </div>
         </div>
     </div>
+
     {% endfor %}
+
 </div>
 <div class="row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign"
-            aria-hidden="true"></span>Checkout</a>
+    <a href="{% url 'checkout' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-ok-sign"
+            aria-hidden="true"></span> Checkout</a>
 </div>
 
 {% endblock %}
