--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -12,7 +12,8 @@
     <div style="display:none">
         <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
     </div>
-     {{ form.email.errors }}
-    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" class="search-btn" value="Reset password" /></p>
+    {{ form.email.errors }}
+    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input
+            type="submit" class="reset-btn" value="Reset password" /></p>
 </form>
 {% endblock %}
