Commented out the navbar link for accessories

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 <li><a href="{% url 'registration' %}">Register</a></li>
                 <li><a href="{% url 'login' %}">Log In</a></li>
                 {% endif %}
-                <li><a href="{% url 'accessories' %}">Accessories</a></li>
+                <!-- <li><a href="/">Accessories</a></li> -->
                 <li>
                     <a href="{% url 'view_cart' %}">
                         <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
