--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
     {% block head_js %}
     {% endblock %}
 
@@ -30,7 +31,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span> Hear to
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="glyphicon glyphicon-headphones"
+                    aria-hidden="true"></span> Hear to
                 Hear</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -47,7 +49,7 @@
                 <li><a href="{% url 'registration' %}">Register</a></li>
                 <li><a href="{% url 'login' %}">Log In</a></li>
                 {% endif %}
-                <!-- <li><a href="/">Accessories</a></li> -->
+                <li><a href="{% url 'addons' %}">Accessories</a></li>
                 <li>
                     <a href="{% url 'view_cart' %}">
                         <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
