--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -16,8 +16,8 @@ h1 {
 .page-title {
     margin-top: 60px;
     font-size: 40px;
-    color: black;   
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #317eac;   
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -30,6 +30,11 @@ a#product-link {
 
 p {
     font-size: 18px;
+}
+
+.paragraph-content {
+    font-size: 16px;
+    margin-bottom: 70px;
 }
 
 /* Navigation bar */
@@ -186,6 +191,18 @@ caption p {
 
 .product-description {
     min-height: 40px;
+}
+
+.features {
+    display: contents;
+}
+
+.header-info {
+    margin-top: 70px;
+}
+
+.list-item {
+    font-size: 16px;
 }
 
 /* Custom Bootstrap */
