--- a/products/templates/addons.html
+++ b/products/templates/addons.html
@@ -26,7 +26,7 @@
 
                 <div class="input-group">
                     <input name="quantity" type="number" min="1" max="999" class="form-control"
-                        placeholder="Must add minimum one item">
+                        placeholder="Must add minimum one item" required>
                     <span class="input-group-btn">
                         <button class="btn btn-success" type="submit">Add</button>
                     </span>
