Cleaned up white space

--- a/products/templates/addons.html
+++ b/products/templates/addons.html
@@ -7,7 +7,8 @@
 {% block content %}
 
 <h2 class="page-title">Accessories </h2><br>
-<p>If you would like some more information or advice on any of our products please click <a href="{% url 'contact' %}">here</a> to
+<p>If you would like some more information or advice on any of our products please click <a
+        href="{% url 'contact' %}">here</a> to
     send us your query.</p>
 <div class="row row-flex text-center">
 
