--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -7,14 +7,8 @@
 {% block content %}
 
 <h2 class="page-title">Hear to Hear</h2><br>
-<p class="product-info">If you would like some more information or advice on any of our products please click <a
-        href="{% url 'contact' %}">here</a> to
-    send us your query.</p><br><br>
-
-
-
-
-
+<p class="product-info">If you would like some more information or advice on any of our products please click
+    <a href="{% url 'contact' %}">here</a> to send us your query.</p><br><br>
 <div class="container">
     <div class="row">
         <div class="col-xs-4 col-md-4">
