--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
+<p class="email">We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
 <p>You should be receiving it shortly.</p>
 
 {% endblock %}
