Renamed search button

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
             <ul class="nav navbar-nav navbar-center">
                 <form action="{% url 'search' %}" id="search" method="GET">
                     <input type="text" class="search-btn" name="q" placeholder="Search Brands">
-                    <button type="search" class="search-btn">Submit</button>
+                    <button type="search" class="search-btn">Search</button>
                 </form>
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'products' %}">Hearing Aids</a></li>
